[C-5239] Fix horizontal overflow in composer input (#10224)

--- a/packages/web/src/components/data-entry/TextAreaV2.module.css
+++ b/packages/web/src/components/data-entry/TextAreaV2.module.css
@@ -111,6 +111,7 @@ textarea.transparentTextArea {
   position: relative;
   text-align: left;
   pointer-events: none;
+  overflow-wrap: anywhere;
 }
 
 .displayElementContainer::after {
